--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/vrra/FGAN-Build-a-thon-2022/blob/main/Notebooks2022/build_a_thon_graph_v1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Build-a-thon 2022, Hoist the colors?"
@@ -125,17 +115,36 @@
         "## Prerequisite: \n",
         "create a free account at https://console.neo4j.io  \n",
         "Follow steps at https://extranet.itu.int/sites/itu-t/focusgroups/an/input/FGAN-I-253.pdf  \n",
-        "Create a local file .env with \n",
-        "neo4j_uri=\"your uri from console.neo4j.io\"\n",
-        "neo4j_user=\"your username from console.neo4j.io\"\n",
-        "neo4j_password=\"your passwd from console.neo4j.io\""
+        "Create a local file .env with   \n",
+        "neo4j_uri=\"your uri from console.neo4j.io\"  \n",
+        "neo4j_user=\"your username from console.neo4j.io\"  \n",
+        "neo4j_password=\"your passwd from console.neo4j.io\"  "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: python-dotenv in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38/lib/python3.8/site-packages (0.20.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "%pip install python-dotenv\n",
@@ -145,31 +154,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "neo4j+s://a4270446.databases.neo4j.io\n",
-            "neo4j\n",
-            "Pn8T12EjCxRLRfaHClsJIaCFAdWcER4pEeIp4dRKyzg\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "#Vishnu: 1 Jun 2022: use the details from https://console.neo4j.io\n",
         "#especially use your own DB instance and corresponding passwd.\n",
+        "#if you dont have a .env file, replace here with your credentials.\n",
         "\n",
         "uri = os.getenv('neo4j_uri')\n",
         "user = os.getenv('neo4j_user')\n",
-        "password = os.getenv('neo4j_password')\n",
-        "\n",
-        "print(uri)\n",
-        "print(user)\n",
-        "print(password) "
+        "password = os.getenv('neo4j_password')"
       ]
     },
     {
@@ -183,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,7 +187,17 @@
         "id": "hKFE_mBLcWJL",
         "outputId": "a83f3001-1e21-42ff-e147-6bd048b33363"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: neo4j in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38/lib/python3.8/site-packages (4.4.3)\n",
+            "Requirement already satisfied: pytz in /opt/homebrew/Caskroom/miniforge/base/envs/myenv38/lib/python3.8/site-packages (from neo4j) (2021.3)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install neo4j"
       ]
@@ -207,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
@@ -215,11 +221,7 @@
       "source": [
         "from neo4j import GraphDatabase\n",
         "import logging\n",
-        "from neo4j.exceptions import ServiceUnavailable\n",
-        "\n",
-        "\n",
-        "#CAUTION: mask the instance and passwd after assignment.\n",
-        "#for demo purposes :)"
+        "from neo4j.exceptions import ServiceUnavailable"
       ]
     },
     {
@@ -233,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -443,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "6p2nMvmodNw4"
       },
@@ -472,11 +474,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "aiKGLHItvp2g"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: Experimentation Controller\n",
+            "Created node: Sandbox\n"
+          ]
+        }
+      ],
       "source": [
         "app.create_node_with_label(\"Experimentation Controller\", \"usecase_001\")\n",
         "app.create_node_with_label(\"Sandbox\", \"usecase_001\")\n"
@@ -493,11 +504,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "5PMotSRCdRdZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Node already exists: Sandbox in ['Actor', 'usecase_001']\n",
+            "adding label usecase_003...\n"
+          ]
+        }
+      ],
       "source": [
         "app.create_node_with_label(\"Sandbox\", \"usecase_003\")\n"
       ]
@@ -513,11 +533,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "9FZGjCA0DmXT"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created relation between: Experimentation Controller, Sandbox\n"
+          ]
+        }
+      ],
       "source": [
         "app.create_rel_with_type_existing_nodes(\"Experimentation Controller\", \"my_best_buddy\", \"Sandbox\")\n"
       ]
@@ -533,11 +561,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "EZjZmOquOxK2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "added label to node: Experimentation Controller\n"
+          ]
+        }
+      ],
       "source": [
         "app.add_label_existing_node(\"Experimentation Controller\", \"usecase_002\")"
       ]
@@ -553,22 +589,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "QXv630w8wdEc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: Experimentation Controller\n",
+            "Found actor-2: Sandbox\n"
+          ]
+        }
+      ],
       "source": [
         "app.find_all_usecase_actors(\"usecase_001\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "XjfqC7ywQK4x"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: Experimentation Controller\n"
+          ]
+        }
+      ],
       "source": [
         "app.find_all_usecase_actors(\"usecase_002\")"
       ]
