added use case 6 cat1 and cat2

--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -757,72 +757,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "w6w8dt-QUUX8"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Created node: Knowledge Base\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Knowledge Base - import - Knowledge Base in usecase_001\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Knowledge Base - export - Knowledge Base in usecase_001\n",
-            "Created node: Knowledge Base Manager\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Knowledge Base Manager - optimizes - Knowledge Base in usecase_001\n",
-            "Node already exists: Knowledge Base Manager in usecase_001\n",
-            "ignoring ...\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Knowledge Base Manager - export - Knowledge Base in usecase_001\n",
-            "Created node: AN Orchestrator\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: AN Orchestrator - refer - Knowledge Base in usecase_001\n",
-            "Node already exists: AN Orchestrator in usecase_001\n",
-            "ignoring ...\n",
-            "Created node: Use case description\n",
-            "Created relation: AN Orchestrator - input - Use case description in usecase_001\n",
-            "Node already exists: AN Orchestrator in usecase_001\n",
-            "ignoring ...\n",
-            "Created node: TOSCA format\n",
-            "Created relation: AN Orchestrator - output - TOSCA format in usecase_001\n",
-            "Created node: Auto controller generator\n",
-            "Node already exists: Knowledge Base in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Auto controller generator - refer - Knowledge Base in usecase_001\n",
-            "Node already exists: Auto controller generator in usecase_001\n",
-            "ignoring ...\n",
-            "Node already exists: TOSCA format in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Auto controller generator - output - TOSCA format in usecase_001\n",
-            "Created node: controller repository\n",
-            "Created node: controllers\n",
-            "Created relation: controller repository - stores - controllers in usecase_001\n",
-            "Created node: ML model\n",
-            "Node already exists: controllers in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: ML model - recommends - controllers in usecase_001\n",
-            "Created node: Human operator\n",
-            "Created node: reports\n",
-            "Created relation: Human operator - input - reports in usecase_001\n",
-            "Node already exists: Human operator in usecase_001\n",
-            "ignoring ...\n",
-            "Node already exists: reports in usecase_001\n",
-            "ignoring ...\n",
-            "Created relation: Human operator - monitors - reports in usecase_001\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "app.create_actors_relationship_with_usecase(\"Knowledge Base\", \"import\", \"Knowledge Base\", \"usecase_001\")\n",
@@ -991,7 +930,7 @@
         "id": "_niHmj2zA-8o"
       },
       "source": [
-        "### FG-AN-USECASE-004\n"
+        "### FG-AN-USECASE-004"
       ]
     },
     {
@@ -1019,15 +958,286 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "y4gZH6d2oNMD"
-      },
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: Adaptation controller\n",
+            "Found actor-2: undeployed controllers\n",
+            "Found actor-3: deployed controllers\n"
+          ]
+        }
+      ],
       "source": [
+        "app.find_all_usecase_actors(\"usecase_004\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-005"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Service management framework\", \"is\", \n",
+        "                                        \"underlay\", \"usecase_005\")\n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"discover\", \n",
+        "                                        \"Service management framework\", \"usecase_005\")     \n",
+        "app.create_actors_relationship_with_usecase(\"Adaptation controller\", \"influence\", \n",
+        "                                        \"Service management framework\", \"usecase_005\")  \n",
+        "app.create_actors_relationship_with_usecase(\"intent\", \"is\", \n",
+        "                                        \"influence\", \"usecase_005\")  \n",
+        "app.create_actors_relationship_with_usecase(\"policy\", \"is\", \n",
+        "                                        \"influence\", \"usecase_005\")                                         "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: policy\n",
+            "Found actor-2: Service management framework\n",
+            "Found actor-3: underlay\n",
+            "Found actor-4: intent\n",
+            "Found actor-5: influence\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors(\"usecase_005\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-006 cat1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: Evolution controller\n",
+            "Node already exists: controllers in usecase_001,usecase_004\n",
+            "adding prop usecase_006 in addition to usecase_001,usecase_004\n",
+            "Created relation: Evolution controller - monitors - controllers in usecase_006\n",
+            "Node already exists: Evolution controller in usecase_006\n",
+            "ignoring ...\n",
+            "Created node: use cases\n",
+            "Created relation: Evolution controller - discovers - use cases in usecase_006\n",
+            "Node already exists: Evolution controller in usecase_006\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in usecase_001,usecase_004,usecase_006\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - recommends - controllers in usecase_006\n",
+            "Node already exists: Evolution controller in usecase_006\n",
+            "ignoring ...\n",
+            "Node already exists: Knowledge Base in usecase_001,usecase_002,usecase_003,usecase_004\n",
+            "adding prop usecase_006 in addition to usecase_001,usecase_002,usecase_003,usecase_004\n",
+            "Created relation: Evolution controller - refers - Knowledge Base in usecase_006\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"monitors\", \n",
+        "                                        \"controllers\", \"usecase_006_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"discovers\", \n",
+        "                                        \"use cases\", \"usecase_006_cat1\")     \n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"recommends\", \n",
+        "                                        \"controllers\", \"usecase_006_cat1\")  \n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"refers\", \n",
+        "                                        \"Knowledge Base\", \"usecase_006_cat1\")  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: Evolution controller\n",
+            "Found actor-2: use cases\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors(\"usecase_006_cat1\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-006 cat2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Created node: Data collector\n",
+            "Created node: data\n",
+            "Created relation: Data collector - consumes - data in usecase_006_cat2\n",
+            "Created node: Management domain\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created relation: Management domain - produces - data in usecase_006_cat2\n",
+            "Node already exists: Management domain in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: RAN cell\n",
+            "Created relation: Management domain - has - RAN cell in usecase_006_cat2\n",
+            "Node already exists: Data collector in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created relation: Data collector - produces - data in usecase_006_cat2\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: real time\n",
+            "Created relation: data - has - real time in usecase_006_cat2\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: data quality\n",
+            "Created relation: data - has - data quality in usecase_006_cat2\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: KPI\n",
+            "Created relation: data - has - KPI in usecase_006_cat2\n",
+            "Created node: Data monitor\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created relation: Data monitor - consumes - data in usecase_006_cat2\n",
+            "Node already exists: Data monitor in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: data monitoring\n",
+            "Created relation: Data monitor - has - data monitoring in usecase_006_cat2\n",
+            "Node already exists: Data monitor in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Node already exists: reports in usecase_001,usecase_002\n",
+            "adding prop usecase_006_cat2 in addition to usecase_001,usecase_002\n",
+            "Created relation: Data monitor - produces - reports in usecase_006_cat2\n",
+            "Node already exists: reports in usecase_001,usecase_002,usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: visualizations\n",
+            "Created relation: reports - has - visualizations in usecase_006_cat2\n",
+            "Created node: Data analytics\n",
+            "Node already exists: data in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created relation: Data analytics - consumes - data in usecase_006_cat2\n",
+            "Node already exists: Data analytics in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: inference\n",
+            "Created relation: Data analytics - produces - inference in usecase_006_cat2\n",
+            "Node already exists: Data analytics in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: ml model\n",
+            "Created relation: Data analytics - has - ml model in usecase_006_cat2\n",
+            "Node already exists: inference in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: periodicity\n",
+            "Created relation: inference - has - periodicity in usecase_006_cat2\n",
+            "Node already exists: ml model in usecase_006_cat2\n",
+            "ignoring ...\n",
+            "Created node: model training\n",
+            "Created relation: ml model - has - model training in usecase_006_cat2\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Data collector\", \"consumes\", \n",
+        "                                        \"data\", \"usecase_006_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"Management domain\", \"produces\", \n",
+        "                                        \"data\", \"usecase_006_cat2\")     \n",
+        "app.create_actors_relationship_with_usecase(\"Management domain\", \"has\", \n",
+        "                                        \"RAN cell\", \"usecase_006_cat2\")  \n",
+        "app.create_actors_relationship_with_usecase(\"Data collector\", \"produces\", \n",
+        "                                        \"data\", \"usecase_006_cat2\") \n",
         "\n",
+        "app.create_actors_relationship_with_usecase(\"data\", \"has\", \n",
+        "                                        \"real time\", \"usecase_006_cat2\")     \n",
+        "app.create_actors_relationship_with_usecase(\"data\", \"has\", \n",
+        "                                        \"data quality\", \"usecase_006_cat2\")  \n",
+        "app.create_actors_relationship_with_usecase(\"data\", \"has\", \n",
+        "                                        \"KPI\", \"usecase_006_cat2\") \n",
         "\n",
-        "---\n",
-        "\n"
+        "app.create_actors_relationship_with_usecase(\"Data monitor\", \"consumes\", \n",
+        "                                        \"data\", \"usecase_006_cat2\")     \n",
+        "app.create_actors_relationship_with_usecase(\"Data monitor\", \"has\", \n",
+        "                                        \"data monitoring\", \"usecase_006_cat2\")  \n",
+        "app.create_actors_relationship_with_usecase(\"Data monitor\", \"produces\", \n",
+        "                                        \"reports\", \"usecase_006_cat2\") \n",
+        "app.create_actors_relationship_with_usecase(\"reports\", \"has\", \n",
+        "                                        \"visualizations\", \"usecase_006_cat2\")                                         \n",
+        "app.create_actors_relationship_with_usecase(\"Data analytics\", \"consumes\", \n",
+        "                                        \"data\", \"usecase_006_cat2\")    \n",
+        "app.create_actors_relationship_with_usecase(\"Data analytics\", \"produces\", \n",
+        "                                        \"inference\", \"usecase_006_cat2\")                                           \n",
+        "app.create_actors_relationship_with_usecase(\"Data analytics\", \"has\", \n",
+        "                                        \"ml model\", \"usecase_006_cat2\") \n",
+        "app.create_actors_relationship_with_usecase(\"inference\", \"has\", \n",
+        "                                        \"periodicity\", \"usecase_006_cat2\")      \n",
+        "app.create_actors_relationship_with_usecase(\"ml model\", \"has\", \n",
+        "                                        \"model training\", \"usecase_006_cat2\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: Data collector\n",
+            "Found actor-2: data\n",
+            "Found actor-3: Management domain\n",
+            "Found actor-4: RAN cell\n",
+            "Found actor-5: real time\n",
+            "Found actor-6: data quality\n",
+            "Found actor-7: KPI\n",
+            "Found actor-8: Data monitor\n",
+            "Found actor-9: data monitoring\n",
+            "Found actor-10: visualizations\n",
+            "Found actor-11: Data analytics\n",
+            "Found actor-12: inference\n",
+            "Found actor-13: ml model\n",
+            "Found actor-14: periodicity\n",
+            "Found actor-15: model training\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors(\"usecase_006_cat2\")"
       ]
     },
     {
