--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -30,7 +30,7 @@
             "remote: Counting objects: 100% (74/74), done.\u001b[K\n",
             "remote: Compressing objects: 100% (44/44), done.\u001b[K\n",
             "remote: Total 228 (delta 37), reused 64 (delta 29), pack-reused 154\u001b[K\n",
-            "Receiving objects: 100% (228/228), 2.49 MiB | 2.94 MiB/s, done.\n",
+            "Receiving objects: 100% (228/228), 2.49 MiB | 3.34 MiB/s, done.\n",
             "Resolving deltas: 100% (107/107), done.\n"
           ]
         }
@@ -134,12 +134,13 @@
       "source": [
         "### For Colab users:\n",
         "\n",
-        "If you are using colab, add your credentials here and uncomment these:"
+        "If you are using colab, add your credentials here and uncomment these  \n",
+        "and skip to step-1 below."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -185,7 +186,7 @@
               "True"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -199,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -224,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -258,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
@@ -280,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -297,6 +298,7 @@
         "        # Don't forget to close the driver connection when you are finished with it\n",
         "        self.driver.close()\n",
         "\n",
+        "    #Vishnu: 1 Aug 2022: Invariant: only 1 actor with 1 name.\n",
         "    #Vishnu: 22 Jun 2022: refactored, uses properties instead of labels\n",
         "    #Vishnu: 1 Jun 2022: created this f() to create nodes with usecase label\n",
         "    #Vishnu: 2 Jun 2022: added- check if it already exists.\n",
@@ -322,6 +324,9 @@
         "                                self._add_usecase_and_return_existing_node, actor_name, usecase_id)\n",
         "                    else:\n",
         "                      print(\"ignoring ...\")\n",
+        "                    #row has only 1 entry due to invariant. So break here. and exit f()\n",
+        "                    break\n",
+        "\n",
         "\n",
         "    #CAUTION: Assumes that actors already exists with property with use case.\n",
         "    #So, this has to be called only in conjunction with create_node_with_usecase\n",
