added uc 8 cat1 and cat2

--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -164,7 +164,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Read the neo4j URI, username, passwd\n"
+        "#### Read the neo4j URI, username, passwd\n"
       ]
     },
     {
@@ -2111,6 +2111,124 @@
       ],
       "source": [
         "app.find_all_usecase_actors_label(\"usecase_007_cat2\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-008 cat1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"CL automation framework\", \"discovers\", \"network parameters\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"CL automation framework\", \"discovers\", \"data\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"CL automation framework\", \"discovers\", \"KPI\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"CL automation framework\", \"deploys\", \"controllers\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"controllers\", \"provide\", \"optimization\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"KPI\", \"need\", \"optimization\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"use cases\", \"has\", \"KPI\", \"usecase_008_cat1\")\n",
+        "          "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Node already exists: Evolution controller in ['usecase_006_cat1']\n",
+            "adding label usecase_008_cat1 in addition to ['usecase_006_cat1']\n",
+            "Node already exists: use cases in ['usecase_006_cat1', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - discovers - use cases in usecase_008_cat1\n",
+            "Node already exists: Evolution controller in ['usecase_006_cat1', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: controllers in ['usecase_001', 'usecase_004', 'usecase_006_cat1', 'usecase_007_cat1', 'usecase_007_cat2', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: Evolution controller - composes - controllers in usecase_008_cat1\n",
+            "Node already exists: use cases in ['usecase_006_cat1', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Node already exists: data in ['usecase_006_cat2', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Created relation: use cases - has - data in usecase_008_cat1\n",
+            "Node already exists: data in ['usecase_006_cat2', 'usecase_008_cat1']\n",
+            "ignoring ...\n",
+            "Created node: parameters\n",
+            "Created relation: data - has - parameters in usecase_008_cat1\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"discovers\", \"use cases\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"Evolution controller\", \"composes\", \"controllers\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"use cases\", \"has\", \"data\", \"usecase_008_cat1\")\n",
+        "app.create_actors_relationship_with_usecase(\"data\", \"has\", \"parameters\", \"usecase_008_cat1\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found actor-1: controllers\n",
+            "Found actor-2: Evolution controller\n",
+            "Found actor-3: use cases\n",
+            "Found actor-4: data\n",
+            "Found actor-5: KPI\n",
+            "Found actor-6: CL automation framework\n",
+            "Found actor-7: optimization\n",
+            "Found actor-8: network parameters\n",
+            "Found actor-9: parameters\n"
+          ]
+        }
+      ],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_008_cat1\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### FG-AN-USECASE-008 cat2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.create_actors_relationship_with_usecase(\"base station\", \"has\", \"UE location\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"mMiMO controller\", \"needs\", \"UE location\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"mMiMO controller\", \"has\", \"optimization\", \"usecase_008_cat2\") \n",
+        "app.create_actors_relationship_with_usecase(\"optimization\", \"has\", \"goals\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"goals\", \"are\", \"system utilization\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"goals\", \"are\", \"user experience\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"goals\", \"are\", \"target RSRP/SINR distribution\", \"usecase_008_cat2\")\n",
+        "app.create_actors_relationship_with_usecase(\"goals\", \"are\", \"optimal antenna parameters\", \"usecase_008_cat2\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "app.find_all_usecase_actors_label(\"usecase_008_cat2\")"
       ]
     },
     {
